Actualización del proyecto

--- a/odin-recipes/recipes/lasaña.html
+++ b/odin-recipes/recipes/lasaña.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasaña</title>
+    <title>Lasagna</title>
 </head>
 <style>
 
@@ -34,7 +34,7 @@
 <body>
     <a href="../index.html"><img src="/IMG/logo2.png" alt="LOGO" width="55px" height="55px"></a>
 
-    <h1>Lasaña</h1>
+    <h1>Lasagna</h1>
     <hr>
 
     <div class="container">
@@ -44,27 +44,28 @@
         </div>
 
         <div class="receta">
-            <h2>Ingredientes</h2>
+            <h2>Ingredients</h2>
             <ul>
-                <li>Carne</li>
-                <li>Cebolla y ajo</li>
-                <li>Tomates</li>
-                <li>Azúcar</li>
-                <li>Especias y condimentos</li>
-                <li>Fideos de lasaña</li>
-                <li>Quesos:</li>
-                <li>Huevo</li>
+                <li>Meat</li>
+                <li>Onion and garlic</li>
+                <li>Tomatoes</li>
+                <li>Sugar</li>
+                <li>Spices and seasonings</li>
+                <li>Lasagna noodles</li>
+                <li>Cheeses</li>
+                <li>Eggs</li>
             </ul>
 
-            <h2>Cómo hacer lasaña</h2>
-            <p>He aquí un breve resumen de como hacerla</p>
+            <h2>How to make lasagna</h2>
+            <p>Here is a brief summary of how to do it</p>
             <ul>
-                <li>Hacer la salsa.</li>
-                <li>Cocer los fideos.</li>
-                <li>Preparar la carne</li>
-                <li>Colocar la lasaña en capas con cada uno de los ingredientes</li>
-                <li>Cubra con papel de aluminio y hornee.</li>
-                <li>Deje reposar la lasaña antes de servir.</li>
+                <li>Prepare the sauce.</li>
+                <li>Cook the noodles.</li>
+                <li>Meat preparation</li>
+                <li>Layer the lasagna with each of the ingredients.</li>
+                <li>Cover with aluminum foil and bake.</li>
+                <li>Let the lasagna rest before serving.</li>
+                
             </ul>
         </div>
     </div>
