--- a/odin-recipes/recipes/tacos.html
+++ b/odin-recipes/recipes/tacos.html
@@ -45,28 +45,28 @@
         </div>
 
         <div class="receta">
-            <h2>Ingredientes</h2>
+            <h2>Ingredients</h2>
             <ul>
-                <li>Carne</li>
-                <li>Cebolla y ajo</li>
-                <li>Tomates</li>
+                <li>Meat</li>
+                <li>Onion and garlic</li>
+                <li>Tomatoes</li>
                 <li>Orégano</li>
-                <li>Especias y condimentos</li>
-                <li>Chile seco (a gusto)</li>
+                <li>Spices and seasonings</li>
+                <li>Dry chili (to your liking)</li>
                 <li>Cilantro</li>
                 <li>tortillas </li>
             </ul>
 
-            <h2>Cómo hacer Tacos</h2>
-            <p>He aquí un breve resumen de como hacerlos</p>
+            <h2>How to make Tacos</h2>
+            <p>Here is a brief summary of how to make them</p>
             <ul>
-                <li>Cortar la carne en tiritas y en un bol salpimentar</li>
-                <li>CEn una sartén poner un chorro de aceite, el chile seco y el orégano y calentar unos 2 o 3 minutos. Agregar el ajo y el chile y sofreír unos minutos más.</li>
-                <li>Agregar la carne y saltear.</li>
-                <li>Caltear el resto de las verduras hasta que estén cocidas</li>
-                <li>Calentar las tortillas</li>
-                <li>Preparar los tacos</li>
-                <li>Servir y acompañar con una salsa</li>
+                <li>Cut the meat into strips, place in a bowl and season with salt and pepper.</li>
+                <li>In a frying pan put a dash of oil, the dried chili and oregano and heat for 2 or 3 minutes.</li>
+                <li>Add the meat </li>
+                <li>Heat the rest of the vegetables until cooked</li>
+                <li>Heat the tortillas.</li>
+                <li>Preparation of tacos</li>
+                <li>Serve and accompany with a sauce</li>
             </ul>
         </div>
     </div>
