--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <style>
+
     .container{
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -23,12 +25,13 @@
     .recetas{
         display: grid;
         grid-template-columns: repeat(3,1fr);
+        gap: 6px;
     }
 
     .card{
         width: 18rem;
         border: 2px dotted rgb(208, 147, 72); 
-        margin: 4rem;
+        margin-left: 11rem;
         border-radius: 6px;
     }
 
@@ -68,7 +71,6 @@
             <img src="/IMG/logo.png" alt="Logo" style="width: 650px; height: 150px;">
             <h1>Odin Recipes</h1>
         </div>
-    
     
         <div class="recetas">
 
