--- a/odin-recipes/recipes/pizza.html
+++ b/odin-recipes/recipes/pizza.html
@@ -44,30 +44,30 @@
         </div>
 
         <div class="receta">
-            <h2>Ingredientes</h2>
+            <h2>Ingredients</h2>
             <ul>
-                <li>400 gramos de harina de trigo</li>
-                <li>1 cucharadita de levadura fresca </li>
-                <li>200 ml de agua</li>
-                <li>Una pizca de sal</li>
-                <li>Una pizca de azúcar</li>
-                <li>Salsa de tomate</li>
-                <li>Queso mozzarella</li>
-                <li>jamón</li>
-                <li>pepperoni ó salchichas</li>
+                <li>400 grams of wheat flour</li>
+                <li>1 teaspoon fresh yeast </li>
+                <li>200 ml of water</li>
+                <li>A pinch of salt</li>
+                <li>A pinch of sugar</li>
+                <li>Tomato sauce</li>
+                <li>Mozzarella cheese</li>
+                <li>ham</li>
+                <li>pepperoni or sausage</li>
             </ul>
 
-            <h2>Cómo hacer Pizza</h2>
-            <p>He aquí un breve resumen de como hacerla</p>
+            <h2>How to make Pizza</h2>
+            <p>Here is a brief summary of how to do it</p>
             <ul>
-                <li>Hacer masa para la pizza.</li>
-                <li>Muele los tomates en un procesador de alimentos ó en una licuadora para la salsa</li>
-                <li>Rallar el queso mozzarella</li>
-                <li>Pica todos los demás ingredientes</li>
-                <li>Armar la pizza</li>
-                <li>Llevar al horno, previamente precalentado a 200 grados centígrados.</li>
-                <li>Dejar cocinar por 10-15 minutos. Vigilando que no se vaya a quemar</li>
-                <li>Una vez lista tu pizza, córtala en su clásica forma triangular y disfrútala en familia.</li>
+                <li>Make the pizza dough.</li>
+                <li>Crush the tomatoes for the sauce.</li>
+                <li>Grate the mozzarella cheese</li>
+                <li>Chop all other ingredients</li>
+                <li>Pizza preparation</li>
+                <li>Bake in a preheated oven at 200 degrees. </li>
+                <li>Cook for 10-15 minutes. Watch that it does not burn</li>
+                <li>Once the pizza is ready, cut it into its classic triangular shape and enjoy it with the family.</li>
             </ul>
         </div>
     </div>
